--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^48.10.6"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs,cjs}": [
